# Learn6502

./: .editorconfig  .gitignore  .pnp.cjs  .prettierignore  .weblate  .yarnrc.yml  Learn6502.doap  README.md  build-flatpak.sh  easy6502.doap  eu.jumplink.Easy6502.json  eu.jumplink.Learn6502.json  meson.build  package-common-ui.mdc  package.json  prettier.config.js
.cursor/rules/: class-structure.mdc  implement-view.mdc  package-6502.mdc  package-app-android.mdc  package-app-gnome.mdc  package-app-web.mdc  package-common-ui-component.mdc  package-common-ui.mdc  workspace-structure.mdc
_layouts/: basic.html  default.html
repo/: summary  summary.idx
repo/refs/heads/app/eu.jumplink.Easy6502/x86_64/: master
repo/refs/heads/runtime/eu.jumplink.Easy6502.Locale/x86_64/: master
repo/summaries/: ef2421ebc5841063b1c4cd032c68c08a8f92425fb7ce34b88fc41bfeed25d1a1-25ee9c51cb53c3d407ad3cafdcbb6a82d13d4fa48028ac520037a32ac5a7b697.delta
